src/app/navbar/navbar.component.scss
.navbar {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    position: fixed;
    width: 100%;
    top: 0;
    background-color: var(--main-bg-color);
    box-shadow: 0 0 8px black;
    padding: 10px;
    z-index: 3;
    transition: transform .2s ease;
}

.navbar.is-hidden {
    transform: translateY(-100%);
}

.title {
    font-size: 40pt;
    margin-left: 15px;
}

.name-container {
    display: flex;
    color: white;
}

.line-container::after {
    content: "";
	display: block;
    width: 64px;
    border-radius: 1px;
	border-bottom: 3px solid var(--main-accent);
    
    transition: width .75s;
}

/* Expanding logo hidden unless on desktop */
.name-shrink {
    display: none;
}

.navbar-right {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
}

.nav-item {
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    font-weight: bold;
    font-size: 24px;
}

.navbar .nav-item {
    margin-right: 40px;
}

@media only screen and (pointer: fine) {
    .nav-item::after {
        content: "";
        display: block;
        width: 0px;
        border-bottom: 2px solid var(--main-accent);
        transition: width .5s;
        border-radius: 1px;
    }

    .nav-item:hover::after {
        width: 100%;
    }
}

/* Navbar animations for desktop */
@media
only screen and (pointer: fine) and (min-width: 1250px),
only screen and (pointer: fine) and (max-width: 900px) and (min-width: 575px) {
    .name-shrink {
        display: unset;
        
        white-space: nowrap;
        overflow: hidden;
        
        max-width: 0;
        transition: max-width .75s;
    }
    
    .line-container:hover .name-shrink {
        max-width: 100%;
    }
    
    .line-container:hover::after {
        width: 100%;
    }
}

.hamburger {
    color: white;
    font-size: 32px;
    text-align: center;
    padding-right: 28px;
    width: 44px;
    cursor: pointer;
}

.navmenu {
    height: 100%;
    width: 0;
    max-width: 425px;
    position: fixed;
    top: 0;
    right: 0;
    z-index: 4;
    overflow: hidden;
    
    background-color: var(--main-bg-color);
    transition: width .4s ease-out;
    box-shadow: -10vw 0 20vw black;
}

.navmenu-items {
    display: grid;
    gap: 20px;
    align-content: start;
    grid-template-columns: auto;
    
    margin: 40px;
}

.close-navmenu-button {
    position: absolute;
    top: 0;
    right: 0;
    padding: 20px;
    
    font-size: 32px;
    text-align: center;
    width: 44px;
    cursor: pointer;
}

@media (pointer: fine) {
    .hamburger, .close-navmenu-button {
        transition: color .1s;
    }
    .hamburger:hover, .close-navmenu-button:hover {
        color: #bebec8;
    }
}

.navmenu .nav-item {
    justify-self: start;
}

.close-navmenu-region {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 4;
    display: none;
    cursor: pointer;
}

/* Change nav type for mobile/desktop */
/* Mobile OR small desktop */
@media (pointer: coarse), (max-width: 900px) {
    .navbar .navbar-right .nav-item {
        display: none;
    }
}

/* Desktop */
@media (pointer: fine) and (min-width: 900px) {
    .hamburger {
        display: none;
    }
    
    .navmenu {
        display: none;
    }
}

// utility classes for opening and closing navmenu
.open {
    width: 85vw;
}

.visible {
    display: unset;
}

